--- a/TCPServer/TCPServer.csproj
+++ b/TCPServer/TCPServer.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Lot.cs" />
     <Compile Include="Server.cs">
       <SubType>Form</SubType>
     </Compile>
