--- a/TCPServer/TCPServer.csproj
+++ b/TCPServer/TCPServer.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MercuryAPI">
+      <HintPath>..\..\..\..\..\Desktop\mercuryapi-1.29.2.10\mercuryapi-1.29.2.10\cs\MercuryAPI.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Lot.cs" />
+    <Compile Include="Reader.cs" />
     <Compile Include="Server.cs">
       <SubType>Form</SubType>
     </Compile>
