--- a/TCPServer/TCPServer.csproj
+++ b/TCPServer/TCPServer.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MercuryAPI">
-      <HintPath>..\..\..\..\..\Desktop\mercuryapi-1.29.2.10\mercuryapi-1.29.2.10\cs\MercuryAPI.dll</HintPath>
+      <HintPath>..\..\..\..\Desktop\mercuryapi-1.29.2.10\mercuryapi-1.29.2.10\cs\MercuryAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
