--- a/SimpleAsyncSocket/TCPClient.csproj
+++ b/SimpleAsyncSocket/TCPClient.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Client.Designer.cs">
       <DependentUpon>Client.cs</DependentUpon>
     </Compile>
+    <Compile Include="CountDownLatch.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleLot.cs" />
